--- a/insta/src/main/resources/application.yml
+++ b/insta/src/main/resources/application.yml
@@ -1,13 +1,15 @@
 server :
-  port : 8000
+  port : 8001
 spring:
   devtools:
     livereload:
       enabled: true
   datasource:
-    url: jdbc:mysql://localhost:3306/insta?serverTimezone=UTC&amp;characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/insta?serverTimezone=UTC&amp&characterEncoding=UTF-8
     username: root
     password: 1234
 
 mybatis:
   config-location: classpath:config/myBatis.xml
+
+
