--- a/insta/src/main/resources/application.yml
+++ b/insta/src/main/resources/application.yml
@@ -8,7 +8,9 @@ spring:
     url: jdbc:mysql://localhost:3306/insta?serverTimezone=UTC&amp&characterEncoding=UTF-8
     username: root
     password: 1234
-
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 mybatis:
   config-location: classpath:config/myBatis.xml
 
